net/aws/vpc/main.tf
// file: vpc/main.tf

// ---------------------------------------------------------------------------------------------------------------------
// VPC
// ---------------------------------------------------------------------------------------------------------------------

resource "aws_vpc" "main" {
  cidr_block           = "${var.cidr_block}"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags {
    Name = "${var.name}"
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// Gateways
// ---------------------------------------------------------------------------------------------------------------------

resource "aws_internet_gateway" "main" {
  vpc_id = "${aws_vpc.main.id}"

  tags {
    Name = "${var.name}"
  }
}

resource "aws_nat_gateway" "main" {
  count         = "${length(var.internal_subnets) > 0 ? length(var.internal_subnets) : 0 }"
  allocation_id = "${element(aws_eip.nat.*.id, count.index)}"
  subnet_id     = "${element(aws_subnet.external.*.id, count.index)}"
  depends_on    = ["aws_internet_gateway.main"]
}

resource "aws_eip" "nat" {
  count = "${length(var.internal_subnets) > 0 ? length(var.internal_subnets) : 0 }"
  vpc   = true
}

// ---------------------------------------------------------------------------------------------------------------------
// Subnets
// ---------------------------------------------------------------------------------------------------------------------

resource "aws_subnet" "internal" {
  vpc_id            = "${aws_vpc.main.id}"
  cidr_block        = "${element(var.internal_subnets, count.index)}"
  availability_zone = "${element(var.availability_zones, count.index)}"
  count             = "${length(var.internal_subnets)}"

  tags {
    Name = "${var.name}-${format("internal-%03d", count.index+1)}"
  }
}

resource "aws_subnet" "external" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "${element(var.external_subnets, count.index)}"
  availability_zone       = "${element(var.availability_zones, count.index)}"
  count                   = "${length(var.external_subnets)}"
  map_public_ip_on_launch = true

  tags {
    Name = "${var.name}-${format("external-%03d", count.index+1)}"
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// Route Tables
// ---------------------------------------------------------------------------------------------------------------------

resource "aws_route_table" "external" {
  vpc_id = "${aws_vpc.main.id}"

  tags {
    Name = "${var.name}-external-001"
  }
}

resource "aws_route" "external" {
  route_table_id         = "${aws_route_table.external.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.main.id}"
}

resource "aws_route_table" "internal" {
  count  = "${length(var.internal_subnets)}"
  vpc_id = "${aws_vpc.main.id}"

  tags {
    Name = "${var.name}-${format("internal-%03d", count.index + 1)}"
  }
}

resource "aws_route" "internal" {
  count                  = "${length(var.internal_subnets) > 0 ? length(var.internal_subnets) : 0 }"
  route_table_id         = "${element(aws_route_table.internal.*.id, count.index)}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = "${element(aws_nat_gateway.main.*.id, count.index)}"
}

// ---------------------------------------------------------------------------------------------------------------------
// Security Group
// ---------------------------------------------------------------------------------------------------------------------

resource "aws_default_security_group" "default" {
  tags {
    Name = "${var.name}"
  }
}

resource "aws_security_group_rule" "ingress_all" {
  security_group_id        = "${aws_vpc.main.default_security_group_id}"
  type                     = "ingress"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  self                     = true
}

resource "aws_security_group_rule" "egress_all" {
  security_group_id        = "${aws_vpc.main.default_security_group_id}"
  type                     = "egress"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  cidr_blocks              = ["0.0.0.0/0"]
}

// ---------------------------------------------------------------------------------------------------------------------
// Route associations
// ---------------------------------------------------------------------------------------------------------------------

resource "aws_route_table_association" "internal" {
  count          = "${length(var.internal_subnets)}"
  subnet_id      = "${element(aws_subnet.internal.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.internal.*.id, count.index)}"
}

resource "aws_route_table_association" "external" {
  count          = "${length(var.external_subnets)}"
  subnet_id      = "${element(aws_subnet.external.*.id, count.index)}"
  route_table_id = "${aws_route_table.external.id}"
}
